tests/NormalTests/paczka2/big_fuzzy/64876131.err
Error in line 7: LOjZMJT2G A158 H4,0
Error in line 8: LOjZMJT2G A158 56,4
Error in line 15: nc5 S514 17,8
Error in line 22: 90W5Jo S225 90,4
Error in line 19: 3wq2 S514 96,7
Error in line 18: nc5 A158 96,6
Error in line 32: LOjZMJT2G S514 47,4
Error in line 42: LOjZMJT2G A158 15,3
Error in line 49: LOjZMJT2G S514 78,4
Error in line 66: NszfaqtY S219 14,9
Error in line 57: nc5 S225 180,6
Error in line 95: 3wq2 S219 99,6
Error in line 99: 3wq2 S225 25,2
Error in line 102: 90W5Jo S225 45,4
Error in line 111: NszfaqtY S219 54,3
Error in line 123: 90W5Jo S514 78,2
Error in line 124: 90W5Jo S219 81,0
Error in line 130: LOjZMJT2G A158 52,1
Error in line 131: nc5 S225 472,5
Error in line 140: LOjZMJT2G S219 18,12
Error in line 139: LOjZMJT2G S219 72,9
Error in line 133: A158 S219 301,2
Error in line 147: nc5 S514 93,3
Error in line 153: LOjZMJT2G S225 25,2
Error in line 159: 90W5Jo S219 26,9
Error in line 161: 90W5Jo A158 2,2
Error in line 168: nc5 S225 80,3
Error in line 182: NszfaqtY S219 4,0
Error in line 196: LOjZMJT2G S219 -5,4
Error in line 194: LOjZMJT2G S219 76,8
Error in line 198: nc5 S514 85,8
Error in line 205: 90W5Jo S219 34,8
Error in line 211: LOjZMJT2G S225 30,69
Error in line 195: NszfaqtY S514 44,1
Error in line 193: A158 S219 32,9
Error in line 216: A158 A158 19,1
Error in line 218: A158 S219 78,7
Error in line 232: A158 S225 8,5
Error in line 237: LOjZMJT2G S225 325,4
Error in line 249: LOjZMJT2G A158 51,2
